--- a/src/app/flux/outreach/mail-box/mail-box.component.html
+++ b/src/app/flux/outreach/mail-box/mail-box.component.html
@@ -1,4 +1,9 @@
-@if(isMailboxConnected){
+@if(isLoading){
+    <div class="flex items-center justify-center min-h-screen">
+        <app-loading-spinner></app-loading-spinner>
+    </div>
+}
+@else if(isMailboxConnected){
 <div class="flex flex-col h-screen bg-[#ffffff] text-[#4b4b4b]">
     <header class="flex justify-between items-center p-4 bg-white border-b border-[#e0c9a6] shadow-sm" *ngIf="mailBoxData">
         <!-- Left: Logo + User Info -->
@@ -81,10 +86,21 @@
       </aside>
   
       <!-- Main content area - Mail Thread Component -->
-      <main class="flex-1 overflow-auto p-5">
-        <!-- This is where your MailThreadComponent will be rendered -->
-        <app-mail-thread [filter]="selectedFilter" [thread_owner]="threadOwner"></app-mail-thread>
-      </main>
+    <main class="flex-1 overflow-auto p-5">
+       @if (selectedThreadId){
+        <app-mail-thread-detail 
+        [threadId]="selectedThreadId" 
+        (closeThread)="clearSelectedThread()">
+        </app-mail-thread-detail>
+    }
+    @else{
+        <app-mail-thread 
+        [filter]="selectedFilter" 
+        [thread_owner]="threadOwner" 
+        (selectedThreadId)="handleThreadSelected($event)">
+        </app-mail-thread>
+    }
+    </main>
     </div>
   
     <!-- Compose Mail Modal -->
